# SIRQD-epidemic-modelling

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SIRQD_bulk.cpp  SIRQD_bulk.h  generate_random_conections.py  main.cpp
data/: who_knows_who.txt  who_knows_who2.txt  who_knows_who4.txt  who_meets_who.txt  who_meets_who1.txt  who_meets_who3.txt  who_meets_who5.txt
include/: CMakeLists.txt
include/FastRandomLib/src/: fast_random.cpp  fast_random.h
include/SortedSparseMatrix/: CMakeLists.txt
include/double_buffer/: CMakeLists.txt
include/double_buffer/src/: double_buffer.h
raport/: raport.ipynb  raport.md
src/: CMakeLists.txt  SIRQD_bulk.cpp  SIRQD_bulk.h  generate_random_conections.py  main.cpp  run_simulation.py
src/FastRandomLib/: CMakeLists.txt
src/FastRandomLib/src/: fast_random.cpp  fast_random.h
